--- a/package.json
+++ b/package.json
@@ -44,6 +44,6 @@
   "devDependencies": {
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
-    "typescript": "5.0.4"
+    "typescript": "^4.9.5"
   }
 }
